# umfpack-matrix-market

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  all.bash  compare-1-and-2.bash  memcheck.bash  solve_matrix_market.cpp  valgrind.supp
.devcontainer/: devcontainer.json
.github/workflows/: gh-action-test.yml
scripts/: FindUMFPACK.cmake  docker-build-image.bash  docker-shell-into.bash  download-from-matrix-market.bash  publish-docker-image.bash
